5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4008/executions/1573_2897.log
== TEST (2019-03-13 14:19:19) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(18))

# Impressao do dobro do numero
print(36)
-- OUTPUT:
1836
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:19:23) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(18))

# Impressao do dobro do numero
print(36)
-- EXECUTION TIME:
0.199033
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
1836
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
1836
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:19:31) 
-- CODE:
# Use este codigo como ponto de partida
18
# Leitura de valores de entrada e conversao para inteiro
num = int(input(18))

# Impressao do dobro do numero
print(36)
-- OUTPUT:
1836
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:19:34) 
-- CODE:
# Use este codigo como ponto de partida
18
# Leitura de valores de entrada e conversao para inteiro
num = int(input(18))

# Impressao do dobro do numero
print(36)
-- EXECUTION TIME:
0.200816
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
1836
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
1836
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:20:54) 
-- CODE:
# Use este codigo como ponto de partida
18
# Leitura de valores de entrada e conversao para inteiro
num = int(input("18"))

# Impressao do dobro do numero
print(36)
-- OUTPUT:
36
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:20:57) 
-- CODE:
# Use este codigo como ponto de partida
18
# Leitura de valores de entrada e conversao para inteiro
num = int(input("18"))

# Impressao do dobro do numero
print(36)
-- EXECUTION TIME:
0.171119
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
36
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
36
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:21:55) 
-- CODE:
# Use este codigo como ponto de partida
"18"
# Leitura de valores de entrada e conversao para inteiro
num = int(input("18"))

# Impressao do dobro do numero
print(36)
-- EXECUTION TIME:
0.210721
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
36
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
36
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 14:22:04) 
-- CODE:
# Use este codigo como ponto de partida
"18"
# Leitura de valores de entrada e conversao para inteiro
num = int(input("18"))

# Impressao do dobro do numero
print("36")
-- OUTPUT:
36
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 14:22:07) 
-- CODE:
# Use este codigo como ponto de partida
"18"
# Leitura de valores de entrada e conversao para inteiro
num = int(input("18"))

# Impressao do dobro do numero
print("36")
-- EXECUTION TIME:
0.185997
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
36
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
36
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:38:53) 
-- CODE:
# Use este codigo como ponto de partida
18
# Leitura de valores de entrada e conversao para inteiro
num = int(input("18: "))

# Impressao do dobro do numero
print(36)
-- EXECUTION TIME:
0.202695
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
36
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
36
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:39:07) 
-- CODE:
# Use este codigo como ponto de partida
"18"
# Leitura de valores de entrada e conversao para inteiro
num = int(input("18: "))

# Impressao do dobro do numero
print(36)
-- OUTPUT:
36
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:39:10) 
-- CODE:
# Use este codigo como ponto de partida
"18"
# Leitura de valores de entrada e conversao para inteiro
num = int(input("18: "))

# Impressao do dobro do numero
print(36)
-- EXECUTION TIME:
0.127499
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
36
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
36
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:39:39) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input())

# Impressao do dobro do numero
print(36)
-- OUTPUT:
36
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:39:45) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input())

# Impressao do dobro do numero
print()
-- OUTPUT:
36
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:41:06) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

# Impressao do dobro do numero
print()
-- OUTPUT:
36
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:42:51) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

# Impressao do dobro do numero
print(num)
-- OUTPUT:
1234
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:42:54) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

# Impressao do dobro do numero
print(num)
-- EXECUTION TIME:
0.198108
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
1234
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
444
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:44:03) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

# Impressao do dobro do numero
print(num)
-- EXECUTION TIME:
0.184479
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
1234
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
444
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:44:08) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

# Impressao do dobro do numero
print(num)
-- EXECUTION TIME:
0.150947
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
1234
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
444
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 15:45:00) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entra
da e conversao para inteiro
num = int(input("Digite o numero: "))

# Impressao do dobro do numero
print(num+num)
-- ERROR:
File "XXXX", line 4
    da e conversao para inteiro
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:45:03) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entra
da e conversao para inteiro
num = int(input("Digite o numero: "))

# Impressao do dobro do numero
print(num+num)
-- EXECUTION TIME:
0.220524
-- ERROR:
  File "/home/codebench/codes/1573/2897/main.py", line 4
    da e conversao para inteiro
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 15:45:16) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero: "))

# Impressao do dobro do numero
print(num+num)
-- EXECUTION TIME:
0.131669
-- TEST CASE 1:
---- input:
1234
---- correct output:
2468
---- user output:
2468
-- TEST CASE 2:
---- input:
444
---- correct output:
888
---- user output:
888
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
